--- a/Lecture 13/Lecture 13a - Logistic Regression for Classification.ipynb
+++ b/Lecture 13/Lecture 13a - Logistic Regression for Classification.ipynb
@@ -416,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "CausalImagesEnv",
    "language": "python",
    "name": "python3"
   },
@@ -430,14 +430,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.1"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "45fc1f684f6f416f40889115beff3ddf69879b64cf4bfee48cb72a61e9d15d1a"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
