--- a/Lecture 13/Lecture 13b - Poisson Regression.ipynb
+++ b/Lecture 13/Lecture 13b - Poisson Regression.ipynb
@@ -324,7 +324,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -338,12 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "45fc1f684f6f416f40889115beff3ddf69879b64cf4bfee48cb72a61e9d15d1a"
-   }
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
