--- a/Lecture 24/Lecture 25 - Conda Environments.ipynb
+++ b/Lecture 24/Lecture 25 - Conda Environments.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:darkblue\"> Lecture 25 - Conda Environments </span>\n",
+    "# <span style=\"color:darkblue\"> Lecture 24\n",
+    " - Conda Environments </span>\n",
     "\n",
     "<font size = \"5\">\n",
     "\n",
@@ -222,7 +223,7 @@
     "# For example, on the instructor's computer it would be\n",
     "# /Users/asanc31/Documents/GitHub/qtm531spring2024/Lecture 23/configuration_files\n",
     "\n",
-    "directory = \"/Users/asanc31/Documents/GitHub/qtm531spring2024/Lecture 23/configuration_files\"\n"
+    "directory = \"D:\\GitHub\\qtm530fall2024\\Lecture 24\\configuration_files\""
    ]
   },
   {
@@ -236,16 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\"/Users/asanc31/Documents/GitHub/qtm531spring2024/Lecture 23/configuration_files/environment.yml\"'"
+       "'\"D:\\\\GitHub\\\\qtm530fall2024\\\\Lecture 24\\\\configuration_files/environment.yml\"'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,16 +271,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'conda env export > \"/Users/asanc31/Documents/GitHub/qtm531spring2024/Lecture 23/configuration_files/environment.yml\"'"
+       "'conda env export > \"D:\\\\GitHub\\\\qtm530fall2024\\\\Lecture 24\\\\configuration_files/environment.yml\"'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,13 +290,6 @@
     "\n",
     "command"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -315,12 +309,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "example1_path = \"\\\"\" + directory + \"/example1.yml\" + \"\\\"\"\n",
     "example2_path = \"\\\"\" + directory + \"/example2.yml\" + \"\\\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"D:\\\\GitHub\\\\qtm530fall2024\\\\Lecture 24\\\\configuration_files/example1.yml\"'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example1_path"
    ]
   },
   {
@@ -337,16 +351,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'conda env create -f \"/Users/asanc31/Documents/GitHub/qtm531spring2024/Lecture 23/configuration_files/example1.yml\"'"
+       "'conda env create -f \"D:\\\\GitHub\\\\qtm530fall2024\\\\Lecture 24\\\\configuration_files/example1.yml\"'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
