--- a/Lecture 24/Lecture 24 - Conda Environments.ipynb
+++ b/Lecture 24/Lecture 24 - Conda Environments.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:darkblue\"> Lecture 24\n",
+    "# <span style=\"color:darkblue\"> Lecture 24 - Conda Environments\n",
     " - Conda Environments </span>\n",
     "\n",
     "<font size = \"5\">\n",
